--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 
+#Message Configuration
+spring.messages.basename=messages,errors
+#Datasource Configuration
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.url=jdbc:postgresql://localhost:33333/
+spring.datasource.username=postgres
+spring.datasource.password=gjhong1129
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#JPA Configuration
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.default_batch_fetch_size=100
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+
+#JPA Logging
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type=trace
+
