--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
+
+	implementation ("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0")
+
 }
 
 tasks.named('test') {
